--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app:
     image: node:18.13.0-bullseye
-    command: npm run start
+    command: npm run dev
     container_name: flowd-server-app
     ports:
       - 3001:3001
