--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node src/index.ts",
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,js,json\" --exec \"ts-node src/index.ts\"",
     "prisma/studio": "prisma studio",
+    "prisma/generate": "prisma generate",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -24,10 +26,14 @@
   "homepage": "https://github.com/pjnicolas/flowd-server#readme",
   "dependencies": {
     "@prisma/client": "^4.9.0",
-    "express": "^4.18.2"
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "joi": "^17.7.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
+    "nodemon": "^2.0.20",
     "prisma": "^4.9.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
