--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
   "homepage": "https://github.com/pjnicolas/flowd-server#readme",
   "dependencies": {
     "@prisma/client": "^4.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
     "joi": "^17.7.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
     "@types/node": "^18.11.18",
     "nodemon": "^2.0.20",
